# Email_triage_agent_crew_ai

./: .dockerignore  Dockerfile  HandsOn_AgenticAI_Questions_and_Answers.docx  HandsOn_LangGraph_Questions (1).docx  HandsOn_LangGraph_Questions_.md  PROMPTS.md  README.md  api.py  email_triage_crewai.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
static/: index.html
