[project]
name = "email-classification-crew-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai[azure-ai-inference]>=1.15.1",
    "fastapi>=0.139.0",
    "langchain-openai>=1.3.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.50.2",
]
